--- a/mm-app/views/app-listing.html
+++ b/mm-app/views/app-listing.html
@@ -22,8 +22,8 @@
 				</div>
 				<div class="info">
 					<div class="filename row">
-						<div class="col-xs-2 text-center icon icon-{{item.type}}"><i class="fa" ng-class="{ 'fa-image':item.type == 'image', 'fa-film':item.type == 'video', 'fa-file-code-o':item.type == 'page'}"></i></div>
-						<div class="col-xs-10 text-left text">{{item.name}}</div>
+						<div class="col-xs-2 col-sm-2 info-fn-cols text-center icon icon-{{item.type}}"><i class="fa" ng-class="{ 'fa-image':item.type == 'image', 'fa-film':item.type == 'video', 'fa-file-code-o':item.type == 'page'}"></i></div>
+						<div class="col-xs-9 col-sm-9 info-fn-cols text-left text">{{item.name}}</div>
 					</div>
 				</div>
 			</div>
