--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-02-26 */
+/*! media-manager 2016-02-27 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -116,6 +116,11 @@ body {
   padding-top: 100px;
   overflow: hidden;
 }
+body.on-drop-hover #mm-filedrop-cover {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
 .mm-wrapper .sidebar,
 .mm-wrapper .filters,
 .mm-wrapper .main {
@@ -134,9 +139,6 @@ body {
 }
 .mm-wrapper .navbar.navbar-fixed-top .btn-close:hover {
   opacity: 1;
-}
-.mm-wrapper .navbar .navbar-nav > li > a {
-  line-height: 1em;
 }
 .mm-wrapper .navbar .navbar-nav > li > a .fa {
   margin-right: 5px;
@@ -167,6 +169,11 @@ body {
   margin-bottom: 20px;
   margin-left: -20px;
 }
+.mm-wrapper .sidebar .nav-sidebar > li {
+  display: block;
+  margin-bottom: 2px;
+  padding: 0;
+}
 .mm-wrapper .sidebar .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
@@ -183,7 +190,7 @@ body {
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:focus {
   color: #428bca;
   background-color: #fff;
-  box-shadow: inset 3px 0 0 #1784c7;
+  box-shadow: inset 4px 0 0 -1px #1784c7;
 }
 .mm-wrapper .filters {
   position: fixed;
@@ -228,6 +235,16 @@ body {
 .mm-wrapper .footer .btn.btn-link:hover {
   text-decoration: none;
 }
+.mm-wrapper .footer .row {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.mm-wrapper .footer .row .col-xs-6 {
+  -webkit-flex-basis: 49%;
+      -ms-flex-preferred-size: 49%;
+          flex-basis: 49%;
+  max-width: 49%;
+}
 #ff-fc-open-state {
   outline: none;
   box-shadow: none;
@@ -262,7 +279,7 @@ body {
   left: 0;
   padding: 8px;
   pointer-events: none;
-  top: 0;
+  top: 1px;
 }
 .mm-wrapper .fancy-filter.is-wide .form-control {
   outline: none;
@@ -328,9 +345,12 @@ body {
   -webkit-transition: -webkit-transform 200ms ease;
           transition: transform 200ms ease;
 }
-.mm-wrapper .media-listing .media-container .media-item .info .filename {
-  padding: 10px;
-  box-sizing: border-box;
+.mm-wrapper .media-listing .media-container .media-item .info .filename .info-fn-cols {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.mm-wrapper .media-listing .media-container .media-item .info .filename .info-fn-cols .fa {
+  margin-left: 5px;
 }
 .mm-wrapper .media-listing .media-container .media-item .info .filename .icon-image {
   color: orange;
@@ -603,6 +623,20 @@ body {
   letter-spacing: 0.5px;
   word-spacing: 1px;
 }
+.mm-wrapper #mm-fileupload-cover .fu-progress .header-bar .label {
+  border-radius: 100px;
+  color: #fff;
+  padding: 1px 12px 2px;
+  margin: 1px 6px 0 0;
+  font-size: 12px;
+  font-weight: 600;
+}
+.mm-wrapper #mm-fileupload-cover .fu-progress .header-bar .label.label-success {
+  background: #54c08a;
+}
+.mm-wrapper #mm-fileupload-cover .fu-progress .header-bar .label.label-danger {
+  background: #a94442;
+}
 .mm-wrapper #mm-fileupload-cover .fu-progress .footer-bar {
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -666,7 +700,7 @@ body {
   left: 0;
   bottom: 0;
   z-index: 0;
-  background: #f9f9fb;
+  background: #efefef;
 }
 .mm-wrapper #mm-fileupload-cover .fu-progress .media:last-child {
   border-bottom: none;
@@ -784,4 +818,32 @@ body {
 #mm-media-upload:focus {
   outline: none;
   box-shadow: none;
+}
+.mm-wrapper #mm-filedrop-cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.95);
+  z-index: 1030;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
+          transition: transform 200ms ease,opacity 200ms ease;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+.mm-wrapper #mm-filedrop-cover .icon {
+  font-size: 6em;
+  text-align: center;
+  line-height: 0;
+  color: #5f6f93;
+  opacity: .83;
+}
+.mm-wrapper #mm-filedrop-cover p {
+  font-size: 29px;
+  color: #5f6f93;
+  font-weight: 300;
+  text-align: center;
 }
