--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-02-27 */
+/*! media-manager 2016-05-10 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -90,6 +90,26 @@
   font-style: italic;
 }
 /* END Extrabold Italic */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 5px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:vertical {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 5px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:vertical:hover,
+.custom-scrollbar::-webkit-scrollbar-thumb:horizontal:hover {
+  background-color: #999;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:horizontal {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+}
 html,
 body {
   padding: 0;
@@ -158,16 +178,19 @@ body.on-drop-hover #mm-filedrop-cover {
   left: 0;
   z-index: 1000;
   display: block;
-  padding: 20px;
+  padding: 40px 20px 20px;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #fff;
   border-right: 1px solid #eee;
 }
-.mm-wrapper .sidebar .nav-sidebar {
-  margin-right: -21px;
-  margin-bottom: 20px;
+.mm-wrapper .sidebar > .nav-sidebar {
   margin-left: -20px;
+  margin-right: -20px;
+}
+.mm-wrapper .sidebar .nav-sidebar {
+  margin-bottom: 20px;
+  padding: 0;
 }
 .mm-wrapper .sidebar .nav-sidebar > li {
   display: block;
@@ -175,22 +198,71 @@ body.on-drop-hover #mm-filedrop-cover {
   padding: 0;
 }
 .mm-wrapper .sidebar .nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 8px 0px 8px 40px;
   color: #666;
   font-weight: 500;
+  display: block;
+  position: relative;
+  -webkit-transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease;
+          transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease;
+}
+.mm-wrapper .sidebar .nav-sidebar > li > a:hover,
+.mm-wrapper .sidebar .nav-sidebar > li > a:active,
+.mm-wrapper .sidebar .nav-sidebar > li > a:focus {
+  text-decoration: none;
 }
 .mm-wrapper .sidebar .nav-sidebar > li > a .sb-icon {
   opacity: .8;
-  margin-right: 10px;
-  font-size: 15px;
+  position: absolute;
+  left: 15px;
+  top: 11px;
+}
+.mm-wrapper .sidebar .nav-sidebar > li > a .sb-text {
+  display: block;
+  width: 98%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.mm-wrapper .sidebar .nav-sidebar > li.root-node > a {
+  padding-left: 20px;
 }
 .mm-wrapper .sidebar .nav-sidebar > li.active > a,
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:hover,
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:focus {
   color: #428bca;
   background-color: #fff;
-  box-shadow: inset 4px 0 0 -1px #1784c7;
+  box-shadow: inset -4px 0 0 -1px #1784c7;
+  text-decoration: none;
+}
+.mm-wrapper .sidebar .nav-sidebar > li.active > a .sb-icon,
+.mm-wrapper .sidebar .nav-sidebar > li.active > a:hover .sb-icon,
+.mm-wrapper .sidebar .nav-sidebar > li.active > a:focus .sb-icon {
+  opacity: 1;
+}
+.mm-wrapper .sidebar .nav-sidebar > li > ul {
+  padding-left: 15px;
+  margin-bottom: 0;
+}
+.mm-wrapper #mm-add-folder-wrap {
+  position: absolute;
+  left: 0;
+  top: -1px;
+  margin-right: -2px;
+}
+.mm-wrapper #mm-add-folder-wrap .form-control {
+  border-radius: 0;
+  box-shadow: none;
+  border-color: #e7e7e7;
+}
+.mm-wrapper #mm-add-folder-wrap .input-group-btn .btn {
+  border-radius: 0;
+  border-color: #e7e7e7;
+  border-right: 0;
+  text-transform: uppercase;
+  letter-spacing: .8px;
+  font-weight: 600;
+  color: #666;
 }
 .mm-wrapper .filters {
   position: fixed;
@@ -199,7 +271,7 @@ body.on-drop-hover #mm-filedrop-cover {
   right: 0;
   z-index: 1000;
   display: block;
-  padding: 20px;
+  padding: 30px 20px 20px;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #fff;
@@ -214,6 +286,77 @@ body.on-drop-hover #mm-filedrop-cover {
   opacity: 1;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+.mm-wrapper .filters #mm-filter-accordion .panel-title {
+  text-transform: uppercase;
+  letter-spacing: .8px;
+  font-size: .8em;
+  font-weight: 600;
+}
+.mm-wrapper .mm-filter-options {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.mm-wrapper .mm-filter-options .mm-f-item {
+  position: relative;
+  margin-bottom: .8em;
+}
+.mm-wrapper .mm-filter-options .mm-f-item:last-child {
+  margin-bottom: 0;
+}
+.mm-wrapper .mm-filter-options .mm-f-item .mm-f-label {
+  padding-left: 24px;
+  color: #666;
+  font-weight: 500;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  text-transform: uppercase;
+  letter-spacing: .8px;
+  font-size: .8em;
+  font-weight: 600;
+}
+.mm-wrapper .mm-filter-options .mm-f-item .mm-f-label:after,
+.mm-wrapper .mm-filter-options .mm-f-item .mm-f-label:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.mm-wrapper .mm-filter-options .mm-f-item .mm-f-label:after {
+  width: 6px;
+  height: 6px;
+  background-color: #ffffff;
+  left: 5px;
+  display: none;
+}
+.mm-wrapper .mm-filter-options .mm-f-item .mm-f-label:before {
+  width: 16px;
+  height: 16px;
+  left: 0;
+  background-color: #ffffff;
+  border: 2px solid #e6e6e6;
+}
+.mm-wrapper .mm-filter-options .mm-f-item.is-active .mm-f-label:before {
+  border-color: #337ab7;
+  background-color: #337ab7;
+}
+.mm-wrapper .mm-filter-options .mm-f-item.is-active .mm-f-label:after {
+  display: block;
+}
+.mm-wrapper .mm-filter-options.mm-f-radio .mm-f-item .mm-f-label:after,
+.mm-wrapper .mm-filter-options.mm-f-radio .mm-f-item .mm-f-label:before {
+  border-radius: 50%;
+}
+.mm-wrapper .mm-filter-options.mm-f-checkbox .mm-f-item .mm-f-label:after {
+  left: 0;
+  width: 16px;
+  height: 16px;
+  background: url("imgs/cd-icon-check.svg?v=1 0") no-repeat center center;
 }
 .mm-wrapper .footer {
   position: fixed;
@@ -846,4 +989,97 @@ body.on-drop-hover #mm-filedrop-cover {
   color: #5f6f93;
   font-weight: 300;
   text-align: center;
+}
+.mm-wrapper #mm-folder-manager {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.99);
+  z-index: 1030;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
+          transition: transform 200ms ease,opacity 200ms ease;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+.mm-wrapper #mm-folder-manager.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.mm-wrapper #mm-folder-manager .title {
+  border-bottom: 1px solid #e7e7e7;
+  padding-bottom: 8px;
+  text-align: left;
+}
+.mm-wrapper #mm-folder-manager .title span {
+  font-size: 1.3em;
+  color: #5f6f93;
+  font-weight: 500;
+}
+.mm-wrapper #mm-folder-manager .title .input-group {
+  width: 40%;
+}
+.mm-wrapper #mm-folder-manager .title .input-group .form-control {
+  border-radius: 0;
+}
+.mm-wrapper #mm-folder-manager .title .input-group .btn {
+  border-radius: 0;
+}
+.mm-wrapper #mm-folder-manager .content {
+  margin: 10px 0;
+  max-height: 300px;
+  overflow: auto;
+  padding: 0 10px;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li {
+  text-align: left;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group {
+  margin: 5px 0;
+  /*padding-left: 20px;*/
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group:hover {
+  background: #efefef;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group:hover .btn-link {
+  opacity: 1;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .input-group-addon {
+  border: 0;
+  background: transparent;
+  border-radius: 0;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .form-control {
+  border-radius: 0;
+  box-shadow: none;
+  border: 0;
+  background: transparent;
+  padding-left: 0;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .form-control:focus + .input-group-btn .btn-link {
+  opacity: 1;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .btn-link {
+  color: #5f6f93;
+  opacity: 0;
+  -webkit-transition: opacity 200ms ease;
+          transition: opacity 200ms ease;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li > ul {
+  list-style: none;
+  padding-left: 20px;
+}
+.mm-wrapper #mm-folder-manager .footbar {
+  border-top: 1px solid #e7e7e7;
+  padding-top: 10px;
 }
