--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-05-10 */
+/*! media-manager 2016-05-13 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -173,12 +173,12 @@ body.on-drop-hover #mm-filedrop-cover {
 }
 .mm-wrapper .sidebar {
   position: fixed;
-  top: 101px;
+  top: 134px;
   bottom: 0;
   left: 0;
   z-index: 1000;
   display: block;
-  padding: 40px 20px 20px;
+  padding: 0 20px 20px;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: #fff;
@@ -194,11 +194,11 @@ body.on-drop-hover #mm-filedrop-cover {
 }
 .mm-wrapper .sidebar .nav-sidebar > li {
   display: block;
-  margin-bottom: 2px;
+  margin-bottom: 0;
   padding: 0;
 }
 .mm-wrapper .sidebar .nav-sidebar > li > a {
-  padding: 8px 0px 8px 40px;
+  padding: 5px 0px 5px 40px;
   color: #666;
   font-weight: 500;
   display: block;
@@ -214,8 +214,8 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper .sidebar .nav-sidebar > li > a .sb-icon {
   opacity: .8;
   position: absolute;
-  left: 15px;
-  top: 11px;
+  left: 20px;
+  top: 8px;
 }
 .mm-wrapper .sidebar .nav-sidebar > li > a .sb-text {
   display: block;
@@ -224,6 +224,10 @@ body.on-drop-hover #mm-filedrop-cover {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.mm-wrapper .sidebar .nav-sidebar > li > a small {
+  text-transform: uppercase;
+  letter-spacing: .8px;
+}
 .mm-wrapper .sidebar .nav-sidebar > li.root-node > a {
   padding-left: 20px;
 }
@@ -231,7 +235,7 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:hover,
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:focus {
   color: #428bca;
-  background-color: #fff;
+  background-color: transparent;
   box-shadow: inset -4px 0 0 -1px #1784c7;
   text-decoration: none;
 }
@@ -244,11 +248,19 @@ body.on-drop-hover #mm-filedrop-cover {
   padding-left: 15px;
   margin-bottom: 0;
 }
+.mm-wrapper .sidebar .folder-tree li {
+  background: url('imgs/treeview-default-line.gif?v=1 0') no-repeat 0px -119px;
+}
+.mm-wrapper .sidebar .folder-tree li:last-child {
+  background-position: 0 -1885px;
+}
 .mm-wrapper #mm-add-folder-wrap {
-  position: absolute;
+  position: fixed;
   left: 0;
-  top: -1px;
+  top: 100px;
   margin-right: -2px;
+  background: #fff;
+  padding: 0;
 }
 .mm-wrapper #mm-add-folder-wrap .form-control {
   border-radius: 0;
@@ -258,7 +270,6 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper #mm-add-folder-wrap .input-group-btn .btn {
   border-radius: 0;
   border-color: #e7e7e7;
-  border-right: 0;
   text-transform: uppercase;
   letter-spacing: .8px;
   font-weight: 600;
@@ -342,8 +353,8 @@ body.on-drop-hover #mm-filedrop-cover {
   border: 2px solid #e6e6e6;
 }
 .mm-wrapper .mm-filter-options .mm-f-item.is-active .mm-f-label:before {
-  border-color: #337ab7;
-  background-color: #337ab7;
+  border-color: #4285f4;
+  background-color: #4285f4;
 }
 .mm-wrapper .mm-filter-options .mm-f-item.is-active .mm-f-label:after {
   display: block;
@@ -1012,17 +1023,17 @@ body.on-drop-hover #mm-filedrop-cover {
           transform: scale(1);
 }
 .mm-wrapper #mm-folder-manager .title {
-  border-bottom: 1px solid #e7e7e7;
-  padding-bottom: 8px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 15px;
   text-align: left;
 }
 .mm-wrapper #mm-folder-manager .title span {
-  font-size: 1.3em;
+  font-size: 1.5em;
   color: #5f6f93;
   font-weight: 500;
 }
 .mm-wrapper #mm-folder-manager .title .input-group {
-  width: 40%;
+  width: 30%;
 }
 .mm-wrapper #mm-folder-manager .title .input-group .form-control {
   border-radius: 0;
@@ -1031,10 +1042,11 @@ body.on-drop-hover #mm-filedrop-cover {
   border-radius: 0;
 }
 .mm-wrapper #mm-folder-manager .content {
-  margin: 10px 0;
+  margin: 0 15px;
   max-height: 300px;
+  min-height: 200px;
   overflow: auto;
-  padding: 0 10px;
+  padding: 0 0 20px;
 }
 .mm-wrapper #mm-folder-manager .content .mm-folderList {
   padding: 0;
@@ -1043,13 +1055,18 @@ body.on-drop-hover #mm-filedrop-cover {
 }
 .mm-wrapper #mm-folder-manager .content .mm-folderList li {
   text-align: left;
+  background-image: url('imgs/treeview-default-line.gif?v=1 0');
+  background-repeat: no-repeat;
+  background-position: -7px -340px;
 }
-.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group {
-  margin: 5px 0;
-  /*padding-left: 20px;*/
+.mm-wrapper #mm-folder-manager .content .mm-folderList li:last-child {
+  background: none;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li:last-child .input-group .input-group-addon {
+  background-position: -7px -1882px, 8px 22px;
 }
 .mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group:hover {
-  background: #efefef;
+  background-color: #efefef;
 }
 .mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group:hover .btn-link {
   opacity: 1;
@@ -1058,6 +1075,11 @@ body.on-drop-hover #mm-filedrop-cover {
   border: 0;
   background: transparent;
   border-radius: 0;
+  padding-left: 15px;
+  background: url('imgs/treeview-default-line.gif?v=1 0') no-repeat -7px -116px;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .input-group-addon .fa {
+  color: #5f6f93;
 }
 .mm-wrapper #mm-folder-manager .content .mm-folderList li .input-group .form-control {
   border-radius: 0;
@@ -1075,11 +1097,39 @@ body.on-drop-hover #mm-filedrop-cover {
   -webkit-transition: opacity 200ms ease;
           transition: opacity 200ms ease;
 }
-.mm-wrapper #mm-folder-manager .content .mm-folderList li > ul {
-  list-style: none;
-  padding-left: 20px;
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .mm-folderList {
+  margin-left: 15px;
+  margin-right: 10px;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li .mm-folderList li .input-group-addon {
+  background-position: -7px -1882px, 8px 22px;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li.ui-sortable-helper {
+  background: #efefef;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList li.ui-sortable-helper .mm-no-children {
+  display: none;
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList.mm-no-children {
+  padding: 10px 10px 10px 0;
+  border: 1px dashed #ccc;
+  position: relative;
+  /*&:before {
+						content: '';
+						position: absolute;
+						top: -13px;
+						left: -2px;
+						background: #fff;
+						width: 2px;
+						height: 12px;
+					}*/
+}
+.mm-wrapper #mm-folder-manager .content .mm-folderList .ui-sortable-placeholder {
+  background: #efefef;
+  border: 1px dashed #ccc;
+  visibility: visible !important;
 }
 .mm-wrapper #mm-folder-manager .footbar {
-  border-top: 1px solid #e7e7e7;
+  border-top: 1px solid #ccc;
   padding-top: 10px;
 }
