--- a/mm-app/views/app-main.html
+++ b/mm-app/views/app-main.html
@@ -102,7 +102,7 @@
 
 		</div>
 		<div class="footbar">
-			<a href="" ng-click="masterController.folders.manager.enabled = false" class="btn btn-link">Close</a>
+			<a href="" ng-click="masterController.folders.manager.enabled = false" class="btn btn-link btn-all-caps">Close</a>
 		</div>
 	</div>
 
