--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-05-13 */
+/*! media-manager 2016-05-16 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -203,8 +203,8 @@ body.on-drop-hover #mm-filedrop-cover {
   font-weight: 500;
   display: block;
   position: relative;
-  -webkit-transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease;
-          transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease;
+  -webkit-transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease, background 500ms ease;
+          transition: color 200ms ease, box-shadow 200ms ease, opacity 200ms ease, background 500ms ease;
 }
 .mm-wrapper .sidebar .nav-sidebar > li > a:hover,
 .mm-wrapper .sidebar .nav-sidebar > li > a:active,
@@ -227,6 +227,9 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper .sidebar .nav-sidebar > li > a small {
   text-transform: uppercase;
   letter-spacing: .8px;
+}
+.mm-wrapper .sidebar .nav-sidebar > li > a.drop-hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .mm-wrapper .sidebar .nav-sidebar > li.root-node > a {
   padding-left: 20px;
@@ -398,6 +401,11 @@ body.on-drop-hover #mm-filedrop-cover {
       -ms-flex-preferred-size: 49%;
           flex-basis: 49%;
   max-width: 49%;
+}
+.mm-wrapper .btn-all-caps {
+  text-transform: uppercase;
+  letter-spacing: .8px;
+  font-size: 1em;
 }
 #ff-fc-open-state {
   outline: none;
@@ -574,6 +582,27 @@ body.on-drop-hover #mm-filedrop-cover {
 .mm-wrapper .media-listing .media-container .media-item.item-selected .checker,
 .mm-wrapper .media-listing .media-container .media-item .checker:hover {
   opacity: 1;
+}
+.mm-item-drag-helper {
+  width: 50px;
+  height: 50px;
+}
+.mm-item-drag-helper.ui-draggable-dragging {
+  position: fixed !important;
+  z-index: 1001;
+}
+.mm-item-drag-helper .item-icon {
+  border-right: 1px solid transparent;
+  background: #ccc;
+  color: #333;
+}
+.mm-item-drag-helper .item-icon i {
+  display: block;
+  padding: 2px;
+}
+.mm-item-drag-helper .item-icon img {
+  width: 100%;
+  height: auto;
 }
 .mm-wrapper .select-count {
   color: #4a556b;
